fixed the header a bit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="xI4zbsy6"></script>
     <div>
         <header class="head">
-            <h2>House of Representives</h1>
+            <h2 class="house">House of Representives</h1>
             <nav>
                 <ul class="social">
                     <li>
